# local-llm

./: .gitignore  Dockerfile  HowToRun.txt  alembic.ini  backend_structure.txt  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  structure.txt
.github/workflows/: main.yml
.grafana-data/: grafana.db
backend/: main.py  pyproject.toml  requirements.txt  test_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 1d3aa5e9d35b_add_chunk_count_to_file_metadata.py  b00573ede956_initial_database_schema.py
backend/api/: auth_utils.py  chat.py  conversations.py  files.py  users.py  utils.py
backend/db/: mongodb.py  session.py
backend/models/: __init__.py  base.py  chat_log.py  embedding.py  file_metadata.py  model_version.py  models.py  user.py
backend/schemas/: chat_schema.py  file_schema.py  user_schema.py
backend/services/: file_service.py  ollama_client.py  processing_service.py
backend/uploads/: End User Worksheet.docx  test4.txt  test5.txt  test6.txt
frontend/: package.json
frontend/local-llm-nextjs/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatWindow.tsx  FileSelectionPanel.tsx  FileUploader.tsx  Header.tsx  ModelCard.tsx  ParameterSliders.tsx  PromptEditorModal.tsx  Providers.tsx
frontend/src/context/: ChatContext.tsx
frontend/src/lib/: api.ts  (+1 more)
github/workflows/: ci.yml
infra/postgres/: init.sql
old_code/: _app.tsx  file_parser.py  index.tsx  text_splitter.py
pgdata/: postmaster.pid
pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
pgdata/pg_xact/: 0000
(+111 files in other folders)
