# /backend/pyproject.toml
[tool.poetry]
name = "local-llm"
version = "0.1.0"
description = "Local LLM backend"
authors = ["Jaden Brescia"]

packages = [{ include = "backend" }]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"] # Standard checks + import sorting

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
SQLAlchemy = "2.0.41" # Note: SQLAlchemy is case-sensitive
asyncpg = ">=0.30.0"
alembic = "^1.11.2"
pgvector = ">=0.2.5,<0.4"
motor = "^3.3.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.11.7"}
email-validator = "^2.2.0"
python-multipart = "^0.0.20"
python-docx = "^1.2.0"
unstructured = "^0.18.2"
langchain="0.3.26"
langchain-core="0.3.68"
langchain-community="0.3.27"
langchain-ollama="0.3.3"
psycopg-binary="3.2.9"
psycopg2-binary="2.9.10"
pypdf="5.7.0"
asyncio="3.4.3"


[tool.pylance]
# This tells Pylance to treat the project root directory
# as a place where it can find source code.
extraPaths = ["."]